Adicionar cadastro profissional

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,10 @@
         <h1>Petshop</h1>
         <nav aria-label="Menu principal">
             <a href="{{ url_for('main.index') }}">Início</a> |
-            <a href="{{ url_for('main.agendar') }}">Agendar Serviço</a>
+            <a href="{{ url_for('main.agendar') }}">Agendar Serviço</a> |
+            <a href="{{ url_for('main.profissionais') }}">Profissionais</a>
+            <a href="{{ url_for('main.cadastrarfuncionario') }}">➕ Cadastrar novo funcionário</a>
+
         </nav> 
         <hr>
     </header>
